# rad

./: .gitignore  AGENTS.md  Cargo.toml  PRODUCT.md  README-WORKTREES.md  README.md  WORKFLOW.md  WORKTREES.md
crates/adb/: Cargo.toml
crates/apk/: Cargo.toml
crates/apk/src/: lib.rs
crates/apk/test_data/: AndroidManifest.xml  test.apk
crates/apk/tests/: inspector_test.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: container.rs  doctor.rs  image.rs  lib.rs  prefix.rs  zygote.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: lib.rs
crates/sandbox/: Cargo.toml
crates/sandbox/src/: binderfs.rs  doctor.rs  lib.rs  wayland.rs
crates/sandbox/tests/: integration_test.rs
crates/wayland/: Cargo.toml
crates/wayland/src/: dmabuf.rs  lib.rs
docs/: REVIEW-2026-02-09.md
docs/tasks/: 00-doctor.md  001-check-user-namespaces.md  001-setup-workspace.md  002-apk-inspector.md  002-check-binderfs.md  003-check-cgroups-v2.md  003-runtime-orchestrator.md  004-apk-installer.md  005-management-commands.md  006-interactive-shell.md  01-apk-inspector.md  011-apk-abi-detection.md  012-axml-parsing-manifest.md  013-prefix-filesystem-setup.md  02-sandbox-binder.md  021-namespace-orchestration.md  022-binderfs-instance-setup.md  023-uid-gid-mapping.md  03-minimal-runtime.md  031-aosp-payload-strategy.md  032-zygote-init-logic.md  033-minimal-system-services.md  04-graphics-wayland.md  041-wayland-connection-rust.md  042-surfaceflinger-interception.md  043-zero-copy-dma-buf.md  050-debt-apk-tests.md  051-debt-axml-parser.md  052-debt-compat-report.md  053-debt-sandbox-implementation.md  054-debt-doctor-tests.md  055-debt-prefix-tests.md  056-debt-dead-code-cleanup.md  057-debt-shell-chroot-failure.md  058-debt-doctor-weak-namespace-check.md  059-aosp-payload-app-process.md  060-integrate-runtime-crate.md  061-debt-wayland-protocol-integration.md  062-implement-logs-follow.md  063-implement-stop-command.md  (+2 more)
payload/: init.c  init_src.rs
prefixes/com.example.placeholder/data/app/com.example.placeholder/: base.apk
scripts/: setup-image.sh
