[workspace]
members = [
    "crates/*",
    "crates/wayland",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Antigravity"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.35", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1.0"
anyhow = "1.0"
nix = { version = "0.27", features = ["fs", "user", "process", "sched", "mount", "feature"] }
rustix = { version = "0.38", features = ["fs", "process", "thread"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
